<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_marginTop="15dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textId"
        android:layout_width="29dp"
        android:layout_height="21dp"
        android:layout_margin="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:inputType="textMultiLine"
        android:text="@string/ref"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nomProduit"
        android:layout_width="105dp"
        android:layout_height="22dp"
        android:layout_margin="8dp"
        android:layout_marginTop="8dp"
        android:inputType="textMultiLine"
        android:maxLines="5"
        android:text="@string/NomDuProduit"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textId"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/codeCatégorie"
        android:layout_width="93dp"
        android:layout_height="22dp"
        android:layout_margin="8dp"
        android:layout_marginTop="8dp"
        android:inputType="textMultiLine"
        android:maxLines="5"
        android:text="@string/CodeCatégorie"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/nomProduit"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/prixUnitaire"
        android:layout_width="71dp"
        android:layout_height="22dp"
        android:layout_margin="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/PrixUnitaire"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/codeCatégorie"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/unitéStock"
        android:layout_width="69dp"
        android:layout_height="23dp"
        android:layout_margin="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/UnitéEnStock"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/prixUnitaire"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

