<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListeSelonCategorieActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Produit par categorie" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="403dp"
        android:layout_height="61dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="4dp"
        android:background="#5F758C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView

            android:id="@+id/textNom"
            android:layout_width="109dp"
            android:layout_height="33dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"
            android:text="@string/NomDuProduit"
            android:textColor="#F3F0F0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textRef"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.444" />

        <TextView
            android:id="@+id/textCateg"
            android:layout_width="96dp"
            android:layout_height="34dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"
            android:text="@string/CodeCatégorie"
            android:textColor="#F3F0F0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textNom"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.444" />

        <TextView
            android:id="@+id/textPrix"
            android:layout_width="83dp"
            android:layout_height="33dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"
            android:text="@string/PrixUnitaire"
            android:textColor="#F3F0F0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textCateg"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.375" />

        <TextView
            android:id="@+id/textQTe"
            android:layout_width="66dp"
            android:layout_height="33dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"
            android:text="@string/UnitéEnStock"
            android:textColor="#FDFCFC"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textPrix"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.454" />

        <TextView
            android:id="@+id/textRef"
            android:layout_width="32dp"
            android:layout_height="33dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"
            android:text="@string/ref"
            android:textColor="#EFE9E9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.444" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler2"
        android:layout_width="409dp"
        android:layout_height="607dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4" />


</androidx.constraintlayout.widget.ConstraintLayout>